tests/ui/async-await/unsized-across-await.stderr
warning: the feature `unsized_locals` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/unsized-across-await.rs:3:12
   |
LL | #![feature(unsized_locals)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #48055 <https://github.com/rust-lang/rust/issues/48055> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the size for values of type `dyn std::fmt::Display` cannot be known at compilation time
  --> $DIR/unsized-across-await.rs:9:9
   |
LL |     let _x = *x;
   |         ^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn std::fmt::Display`
   = note: all values live across `await` must have a statically known size

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
